err/plonesocial.auth.rpx.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/plonesocial'...
Listing './lib/python3.5/site-packages/plonesocial/auth'...
Listing './lib/python3.5/site-packages/plonesocial/auth/rpx'...
Listing './lib/python3.5/site-packages/plonesocial/auth/rpx/browser'...
Listing './lib/python3.5/site-packages/plonesocial/auth/rpx/locales'...
Listing './lib/python3.5/site-packages/plonesocial/auth/rpx/locales/de'...
Listing './lib/python3.5/site-packages/plonesocial/auth/rpx/locales/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/plonesocial/auth/rpx/locales/en'...
Listing './lib/python3.5/site-packages/plonesocial/auth/rpx/locales/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/plonesocial/auth/rpx/plugins'...
Listing './lib/python3.5/site-packages/plonesocial/auth/rpx/portlets'...
Listing './lib/python3.5/site-packages/plonesocial/auth/rpx/profiles'...
Listing './lib/python3.5/site-packages/plonesocial/auth/rpx/profiles/default'...
Listing './lib/python3.5/site-packages/plonesocial/auth/rpx/skins'...
Listing './lib/python3.5/site-packages/plonesocial/auth/rpx/skins/rpx_skins'...
Listing './lib/python3.5/site-packages/plonesocial/auth/rpx/tests'...
Compiling './lib/python3.5/site-packages/plonesocial/auth/rpx/tests/testAuthentication.py'...
***   File "./lib/python3.5/site-packages/plonesocial/auth/rpx/tests/testAuthentication.py", line 30
    print "member_rpx_id: %s" % member.getProperty('rpx_identity')
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/plonesocial/auth/rpx/tests/testExtraction.py'...
***   File "./lib/python3.5/site-packages/plonesocial/auth/rpx/tests/testExtraction.py", line 30
    print 'rpx id: %s' % member.getProperty('rpx_identifier')
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/plonesocial.auth.rpx-0.815.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplejson'...
Listing './lib/python3.5/site-packages/simplejson/tests'...
Listing './lib/python3.5/site-packages/simplejson-3.13.2.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
